# shai-hulud-killer

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  dev.sh  docker-compose.yml  install.sh
.github/workflows/: release.yml
src/: app.rs  main.rs  patterns.rs  scanner.rs  tests.rs  ui.rs
test_samples/clean/: package.json  server.js  utils.ts
test_samples/clean_project/: package.json
test_samples/compromised_packages/: package.json
test_samples/edge_cases/: package.json  suspicious_but_legit.js
test_samples/malicious/: bun_environment.js  evil_script.sh  package.json  setup_bun.js
test_samples/malicious/.github/workflows/: discussion.yaml
