[package]
name = "shai-hulud-killer"
version = "0.1.0"
edition = "2021"
authors = ["Shai-Hulud Killer Team"]
description = "Detect Shai-Hulud 2.0 npm supply chain attack"
license = "MIT"

[dependencies]
# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# File system
walkdir = "2.5"

# Pattern matching
regex = "1.11"

# Hashing
sha2 = "0.10"
hex = "0.4"

# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Parallel processing
rayon = "1.10"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Time
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
